--- a/package.json
+++ b/package.json
@@ -2,86 +2,92 @@
   "name": "graphql-mock-api",
   "version": "1.0.0",
   "dependencies": {
-    "@babel/polyfill": "^7.8.7",
-    "dotenv-safe": "^8.2.0",
-    "graphql": "^15.0.0",
-    "graphql-tools": "^6.0.0",
+    "@babel/polyfill": "^7.12.1",
+    "@graphql-tools/mock": "^9.0.2",
+    "@graphql-tools/schema": "^10.0.3",
+    "@koa/cors": "^5.0.0",
+    "dotenv-safe": "^9.1.0",
+    "graphql": "^16.8.1",
+    "graphql-tools": "^9.0.1",
     "kcors": "^2.2.2",
-    "koa": "^2.12.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-graphql": "^0.8.0",
+    "koa": "^2.15.0",
+    "koa-bodyparser": "^4.4.1",
+    "koa-graphql": "^0.12.0",
     "koa-logger": "^3.2.1",
-    "koa-router": "^8.0.8"
+    "koa-router": "^12.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.8.4",
-    "@babel/node": "7.8.4",
-    "@babel/plugin-proposal-async-generator-functions": "7.8.3",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-export-default-from": "7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "7.8.3",
-    "@babel/plugin-transform-async-to-generator": "7.8.3",
-    "@babel/preset-env": "7.8.4",
-    "@babel/preset-typescript": "7.8.3",
-    "@types/babel__core": "7.1.7",
-    "@types/babel__preset-env": "7.9.0",
-    "@types/dotenv-safe": "^8.1.0",
-    "@types/eslint": "6.8.0",
-    "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/kcors": "^2.2.3",
-    "@types/koa": "^2.11.3",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-graphql": "^0.8.3",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa-router": "^7.4.1",
-    "@types/start-server-webpack-plugin": "^2.2.0",
-    "@types/supertest": "^2.0.9",
-    "@types/webpack": "4.41.13",
-    "@types/webpack-bundle-analyzer": "3.8.0",
-    "@types/webpack-merge": "4.1.5",
-    "@types/webpack-node-externals": "1.7.1",
-    "@types/webpack-plugin-serve": "0.10.0",
-    "@typescript-eslint/eslint-plugin": "2.21.0",
-    "@typescript-eslint/parser": "2.21.0",
-    "babel-jest": "^26.0.1",
-    "babel-loader": "^8.0.5",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "17.1.0",
+    "@babel/cli": "7.23.9",
+    "@babel/core": "7.24.0",
+    "@babel/node": "7.23.9",
+    "@babel/plugin-proposal-async-generator-functions": "7.20.7",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-export-default-from": "7.23.3",
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "7.21.0",
+    "@babel/plugin-transform-async-to-generator": "7.23.3",
+    "@babel/preset-env": "7.24.0",
+    "@babel/preset-typescript": "7.23.3",
+    "@types/babel__core": "7.20.5",
+    "@types/babel__preset-env": "7.9.6",
+    "@types/dotenv-safe": "^8.1.6",
+    "@types/eslint": "8.56.5",
+    "@types/eslint-plugin-prettier": "^3.1.3",
+    "@types/kcors": "^2.2.8",
+    "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-graphql": "^0.8.11",
+    "@types/koa-logger": "^3.1.5",
+    "@types/koa-router": "^7.4.8",
+    "@types/start-server-webpack-plugin": "^2.2.5",
+    "@types/supertest": "^6.0.2",
+    "@types/webpack": "5.28.5",
+    "@types/webpack-bundle-analyzer": "4.7.0",
+    "@types/webpack-merge": "5.0.0",
+    "@types/webpack-node-externals": "3.0.4",
+    "@types/webpack-plugin-serve": "1.4.6",
+    "@typescript-eslint/eslint-plugin": "7.1.1",
+    "@typescript-eslint/parser": "7.1.1",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "esbuild": "^0.20.1",
+    "esbuild-register": "^3.5.0",
+    "eslint": "8.57.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-okonet": "7.0.2",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-config-shellscape": "2.0.2",
-    "eslint-import-resolver-lerna": "^1.1.0",
-    "eslint-import-resolver-typescript": "1.1.1",
-    "eslint-import-resolver-webpack": "0.11.1",
-    "eslint-plugin-cypress": "2.2.1",
-    "eslint-plugin-flowtype": "3.11.1",
-    "eslint-plugin-import": "2.18.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-node": "8.0.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "7.14.2",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-relay": "1.3.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-shellscape": "6.0.1",
+    "eslint-import-resolver-lerna": "^2.0.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-import-resolver-webpack": "0.13.8",
+    "eslint-plugin-cypress": "2.15.1",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "7.34.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-relay": "1.8.3",
     "eslint-plugin-typescript": "0.14.0",
-    "jest": "^26.0.1",
+    "jest": "^29.7.0",
     "reload-server-webpack-plugin": "1.0.1",
     "start-server-webpack-plugin": "^2.2.5",
-    "supertest": "^4.0.2",
-    "typescript": "3.9.2",
-    "webpack": "4.42.1",
-    "webpack-bundle-analyzer": "3.7.0",
-    "webpack-cli": "3.3.11",
-    "webpack-merge": "4.2.2",
-    "webpack-node-externals": "1.7.2",
-    "webpack-plugin-serve": "0.12.1"
+    "supertest": "^6.3.4",
+    "typescript": "5.3.3",
+    "webpack": "5.90.3",
+    "webpack-bundle-analyzer": "4.10.1",
+    "webpack-cli": "5.1.4",
+    "webpack-merge": "5.10.0",
+    "webpack-node-externals": "3.0.0",
+    "webpack-plugin-serve": "1.6.0"
   },
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --watch --progress --config webpack.config.js"
+    "start": "webpack --watch --progress --config webpack.config.js",
+    "es": "node --no-experimental-fetch -r esbuild-register"
   }
 }
